--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html5>
 <html>
-	<head></head>
+	<head>
+		<styles>
+			#btn{
+				border-radius: 1em;
+				background-color: green;
+				color: white;
+				font-weight: bold;
+			}
+		</styles>
+	</head>
 	<body>
 		<h1>Hello this is a web-server</h1>
+		<button id="btn">Click here</button>
 	</body>
 </html>
