--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html5>
 <html>
 	<head>
-		<styles>
+		<style>
 			#btn{
 				border-radius: 1em;
 				background-color: green;
 				color: white;
 				font-weight: bold;
 			}
-		</styles>
+		</style>
 	</head>
 	<body>
 		<h1>Hello this is a web-server</h1>
