--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 				background-color: green;
 				color: white;
 				font-weight: bold;
+				border: none;
+				outline: none;
+				height: 30px;
+				width: 80px;
+				padding: 2px;
+			}
+
+			#btn:hover{
+				cursor: pointer;
 			}
 		</style>
 	</head>
